--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.13",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^1.1.1",
     "xml2js": "^0.4.23"
   },
@@ -37,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.21.1",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0"
   }
 }
